Cree una pagina nueva con imagenes,espacios,vinculos,etc.

--- a/contacto.html
+++ b/contacto.html
@@ -33,9 +33,7 @@
              <img src= "imagenes/calaveras.gif"/>
              <video controls src="http://192.168.0.62:8000/hippo.mp4"></video>
              <audio controls src="http://192.168.0.62:8000/surprise.mp3"></audio>
-
-          
-                
+             <input type="submit" value="Mandar formulario"/>
          </form>   
         </body>
     </html>
